--- a/.htaccess
+++ b/.htaccess
@@ -11,6 +11,12 @@ RewriteRule ^(.*)$ $1.html [NC,L]
 
 <IfModule mod_rewrite.c>
   RewriteEngine On
+
+  # Redirect non-www to www for both HTTP and HTTPS
   RewriteCond %{HTTP_HOST} !^www\. [NC]
-  RewriteRule ^(.*)$ http://www.%{HTTP_HOST}/$1 [R=301,L]
+  RewriteRule ^(.*)$ https://www.%{HTTP_HOST}/$1 [R=301,L]
+
+  # Redirect HTTP to HTTPS
+  RewriteCond %{HTTPS} off
+  RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 </IfModule>
