--- a/.htaccess
+++ b/.htaccess
@@ -8,6 +8,7 @@ RewriteRule ^index\.html$ / [R=301,L]
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteCond %{REQUEST_FILENAME}\.html -f
 RewriteRule ^(.*)$ $1.html [NC,L]
+RewriteRule ^en/home\.html$ /en/ [R=301,L]
 
 <IfModule mod_rewrite.c>
   RewriteEngine On
